Remove duplicate root scripts and untrack .venv/.gitignore and .venv

--- a/webapp/templates/index.html
+++ b/webapp/templates/index.html
@@ -59,7 +59,7 @@
           <button id="sendBtn" class="btn btn--primary" type="submit">Send</button>
         </form>
 
-        <div id="loading" class="loading" hidden>
+        <div id="loading" class="loading" hidden style="display: none;">
           <div class="loading__dot"></div>
           <div class="loading__dot"></div>
           <div class="loading__dot"></div>
