refactor: reorganize folder structure

--- a/src/support_bot/web/templates/index.html
+++ b/src/support_bot/web/templates/index.html
@@ -40,7 +40,7 @@
           {% else %}
             <div class="empty">
               <div class="empty__title">Start a conversation</div>
-              <div class="empty__hint">Try: <code>What’s the price of the Pro model?</code> or <code>status of order #12345</code></div>
+              <div class="empty__hint">Try: <code>What's the price of the Pro model?</code> or <code>status of order #12345</code></div>
             </div>
           {% endif %}
         </div>
