--- a/src/support_bot/web/templates/index.html
+++ b/src/support_bot/web/templates/index.html
@@ -16,6 +16,10 @@
 
         <div class="header__actions">
           <label class="toggle">
+            <input id="themeToggle" type="checkbox" />
+            <span>🌙 Dark</span>
+          </label>
+          <label class="toggle">
             <input id="debugToggle" type="checkbox" />
             <span>Debug</span>
           </label>
@@ -68,7 +72,7 @@
       </main>
 
       <footer class="footer">
-        <span>Local demo UI • Session-based chat history</span>
+        <span>The Smart Customer Support Bot • 2025 </span>
       </footer>
     </div>
 
